--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Target 目标管理工具</title>
-    <script type="module" crossorigin src="/assets/index.9dd35df2.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.e2c00b75.js">
-    <link rel="stylesheet" href="/assets/index.4f48ec41.css">
+    <script type="module" crossorigin src="/assets/index.3fca95bb.js"></script>
+    <link rel="modulepreload" href="/assets/vendor.48825f10.js">
+    <link rel="stylesheet" href="/assets/vendor.90d4b55a.css">
+    <link rel="stylesheet" href="/assets/index.8841953c.css">
   </head>
   <body>
     <div id="app"></div>
